# CarrotContext

./: .env.example  .gitignore  LICENSE  README.md  agents.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  check_db.py  pyproject.toml
backend/app/: config.py  database.py  log.py  main.py
backend/app/auth/: models.py  router.py  service.py
backend/app/files/: router.py  service.py
backend/app/git/: models.py  router.py  service.py
backend/app/knowledge/: access_rules.py  manifest.py  models.py  permissions.py  router.py  service.py
backend/app/lock/: models.py  router.py  service.py
backend/app/mcp/: auth.py  server.py  tools.py
backend/app/search/: models.py  router.py  service.py
backend/tests/: conftest.py  test_access_rules.py  test_auth.py  test_files.py  test_git.py  test_knowledge.py  test_lock.py  test_manifest.py  test_mcp.py  test_path_traversal.py  test_permissions.py  test_search.py
frontend/: Caddyfile  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ContextMenu.tsx  ErrorBoundary.tsx  ThemeToggle.tsx  Toast.tsx
frontend/src/components/CodeEditor/: CodeEditor.tsx
frontend/src/components/FileTree/: FileTree.tsx
frontend/src/components/GitHistory/: GitDiffViewer.tsx  GitHistory.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts
frontend/src/lib/: api.ts
frontend/src/pages/: AdminPage.tsx  DashboardPage.tsx  KnowledgePage.tsx  KnowledgePropertiesPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/stores/: authStore.ts  knowledgeStore.ts  themeStore.ts  toastStore.ts
frontend/src/types/: index.ts
frontend/tests/components/: CodeEditor.test.tsx  FileTree.test.tsx  GitDiffViewer.test.tsx  GitHistory.test.tsx  LoginPage.test.tsx  MarkdownViewer.test.tsx  ThemeToggle.test.tsx
frontend/tests/lib/: api.test.ts
frontend/tests/pages/: AdminPage.test.tsx  DashboardPage.test.tsx  KnowledgePage.test.tsx  KnowledgePropertiesPage.test.tsx  LoginPage.test.tsx  RegisterPage.test.tsx
frontend/tests/stores/: authStore.test.ts  knowledgeStore.test.ts  themeStore.test.ts
(+1 files in other folders)
